# django_proj

./: db.sqlite3  main.py  pyproject.toml
applications/: models.py  serializers.py  urls.py  views.py
applications/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
candidate/: models.py  serializers.py  urls.py  views.py
candidate/migrations/: 0001_initial.py  0002_initial.py
core/: settings.py  urls.py
employer/: models.py  serializers.py  urls.py  views.py
employer/migrations/: 0001_initial.py  0002_initial.py
jobs/: models.py  serializers.py  urls.py  views.py
jobs/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
